# RoManTools

./: .coveragerc  README.md  __init__.py  config.py  data_loader.py  main.py  main_backup.py  pyproject.toml  requirements.txt  setup.py  syllable.py  syllable_processor.py  text_processor.py  utils.py
.github/workflows/: python-test-artifact.yml  release_workflow.yml
ChineseRomanizationTools/: __init__.py  conversion.py  data_loader.py  syllable.py
ChineseRomanizationTools/data/: WGPY.csv
RoManTools/: __init__.py  chunker.py  config.py  constants.py  conversion.py  data_loader.py  main.py  syllable.py  utils.py  word.py
RoManTools/data/: conversion_mapping.csv  stopwords.txt
RoManTools/strategies/: __init__.py  base.py  bopomofo_example.py  factory.py  pinyin.py  wade_giles.py  yale_example.py
Tools/: __init__.py  chunk.py  config.py  conversion.py  data_loader.py  syllable.py  utils.py
Tools/data/: pinyinList.csv  py_wg.csv  wgDF.csv
backup/: import_test.py  main_backup.py
docs/: CLI.md  Input Requirements.md  Input_Requirements.md  Methodology.md  Python.md
src/: __init__.py  chunk.py  config.py  constants.py  conversion.py  data_loader.py  main.py  syllable.py  utils.py  word.py
src/RoManTools/: __init__.py  chunker.py  config.py  conversion.py  data_loader.py  main.py  syllable.py  utils.py  word.py
src/data/: stopwords.txt
tests/: decorators.py  import_test.py  test_features.py  test_main_execution.py  test_romanization.py
tools/: config.py  main.py
