[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoManTools"
version = "1.0"
description = "A toolkit for processing and converting Romanized Mandarin text."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0 license"}
authors = [
    { name = "Jeff Heller", email = "jsheller@princeton.edu" }
]

urls = { "Homepage" = "https://github.com/JHGFD82/RoManTools", "Documentation" = "https://github.com/JHGFD82/RoManTools/docs", "Source" = "https://github.com/JHGFD82/RoManTools", "Tracker" = "https://github.com/JHGFD82/RoManTools/issues" }

dependencies = [
    "numpy>=1.19.2"
]

[tool.setuptools.entry-points]
console_scripts = [
    "romantools = main:main",
]

[tool.setuptools.packages.find]

[project.entry-points."console_scripts"]
romantools = "main:main"