[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoManTools"
version = "1.0"
description = "A toolkit for processing and converting Romanized Mandarin text."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0 license"}
authors = [
    { name = "Jeff Heller", email = "jsheller@princeton.edu" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic"
]
urls = { "Homepage" = "https://github.com/JHGFD82/RoManTools", "Documentation" = "https://github.com/JHGFD82/RoManTools/docs", "Source" = "https://github.com/JHGFD82/RoManTools", "Tracker" = "https://github.com/JHGFD82/RoManTools/issues" }
dependencies = [ "numpy>=1.19.2" ]

[project.scripts]
RoManTools = "RoManTools.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tests"]